# phrides

./: .env.example  .gitignore  AGENTS.md  API_ENDPOINTS.md  ARCHITECTURE.md  AUTOFILL_ARCHITECTURE.md  CENSUS_ZIPCODE_DATA_SOURCES.md  CLAUDE.md  CLAUDE_PROGRESS_UPDATE.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_COMPLETED_SUMMARY.md  COMPLETE_SYSTEM_CAPABILITIES.md  COMPLEX_FIELD_FIXES_SUMMARY.md  COMPLEX_FIELD_QUICK_REFERENCE.md  COMPREHENSIVE_50_DEALERSHIP_RESULTS.md  COMPREHENSIVE_AUTOMATION_DESIGN.md  COMPREHENSIVE_FIXES_SUMMARY.md  CONTACT_PAGE_DISCOVERY_FIX.md  CORRECT_TAB_VERIFICATION.md  CRITICAL_ANALYSIS_AND_RECOMMENDATIONS.md  CRITICAL_CODE_REVIEW.md  CRITICAL_FIXES_APPLIED.md  DEALERINSPIRE_BYPASS_DOCUMENTATION.md  DEALERSHIP_CONTACT_AUTOMATION_DOCUMENTATION.md  DETECTION_RATE_ANALYSIS.md  DEVELOPMENT_READY_SUMMARY.md  EARLY_CAPTCHA_DETECTION.md  FILE_SYSTEM_DOCUMENTATION.md  FINAL_DEPLOYMENT_READY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_RESULTS_SUMMARY.md  FINAL_SYSTEM_EVALUATION.md  FINAL_TEST_RESULTS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FOURTH_CRITICAL_REVIEW.md  FOURTH_REVIEW_FIXES_COMPLETE.md  GEMINI_REFACTORING_FEEDBACK.md  GEOGRAPHIC_FUNCTIONALITY_DOCUMENTATION.md  GITHUB_PUSH_SUCCESS.md  (+103 more)
Dealerships/: Dealerships Unified Production.gsheet
archive/: complete_50_test.py  enhanced_contact_detector.py  resume_50_test.py  retest_failed_dealerships.py  smart_form_detector.py  universal_form_analyzer.py
archive/experiments/: README.md
artifacts/: submission_summary_20250928_151407.json  submission_summary_20250928_152355.json  submission_summary_20250928_173558.json  submission_summary_20250928_201443.json  submission_summary_20250928_201654.json  submission_summary_20250928_201834.json  submission_summary_20250928_203235.json
artifacts/batch_501/: submission_summary_20250928_183606.json
artifacts/new_batch/: submission_summary_20250928_181717.json
backend/: requirements.txt  websocket_server.py
backend/data/: captcha_sites.json  contact_url_cache.json
config/: logging.yml
data/: captcha_sites.json  contact_page_cache.json  contact_url_cache.json  submission_history.json  test_dealerships_la.csv
docs/dealer_flows/: anchorage_chrysler_center.md
frontend/: app.js  diagnose.html  index.html  package-lock.json  package-simple.json  package.json  server.cjs  simple.html  style.css  test.html  websocket_client.js  websocket_integration.js  zip_coordinates.js
frontend/data/: app_state.json  saved_searches.json
scripts/: analyze_random_dealers.py  process_zip_data.py
src/: __init__.py
tmp/: jeep_sample.txt  jeep_sample_after_modal.txt  jeep_sample_seed999.txt
(+142 files in other folders)
